applications/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  labels:
    traefik2: "true"
  annotations:
    kubernetes.io/ingress.class: cert
    #traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-dns01-provider: route53
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: code.decort.tech
    http:
      paths:
      - path: /cert-placeholder
        backend:
          serviceName: codeserver
          servicePort: websecure
  tls:
  - hosts:
    - code.decort.tech
    secretName: code-server-cert   
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  namespace: code-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code.decort.tech`)
      kind: Rule
      services:
        - name: code-server
          port: 80
      middlewares:
        - name: code-server-security
        - name: traefik-auth
  tls:
    secretName: code-server-cert
